--- a/client.html
+++ b/client.html
@@ -99,7 +99,7 @@
               }
               else {
                 document.getElementById("chat_zone2").style.display="block";
-                $('#chat_zone2').prepend('<img id="imgABC" src="imgXYZ.png" />');
+                $('#chat_zone2').prepend('<img id="imgPQR" src="imgPQR.png" />');
                 $('#outer').addClass('borderexampleouterclient');
               }
             })
