--- a/hybrid.html
+++ b/hybrid.html
@@ -55,7 +55,7 @@
 
         $('#btnDistSave').click(function () {
           var color = document.getElementById("txtNameDist").value;
-          document.querySelector('#data_zone').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgABC" src="imgABC.png" />';
+          document.querySelector('#data_zone').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgABC" src="imgXYZ.png" />';
           //document.querySelector("#data_zone").innerHTML = "<p><strong>" + color + "</strong></p>" + '<div><img id="imgABC" src="imgABC.png" /><div>';
 
           //emit some signal telling its a wrong try
@@ -68,7 +68,7 @@
           document.getElementById("btnDistAdd").style.display="none";
           document.getElementById("txtNameDist").style.display="none";
           document.getElementById("data_zone2").style.display="block";
-          document.querySelector('#data_zone2').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgXYZ" src="imgXYZ.png" />';
+          document.querySelector('#data_zone2').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgPQR" src="imgPQR.png" />';
           //document.querySelector("#data_zone2").innerHTML ="<p><strong>" +color +"</strong></p>" +'<div><img id="imgXYZ" src="imgXYZ.png" /><div>';
           $('#outer').addClass('borderexampleouter');
           //document.getElementById("outer").addClass = "borderexample";
