Changed file name

--- a/dist.html
+++ b/dist.html
@@ -20,7 +20,7 @@
       </div>
     </header>
 
-    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='index.html';">
+    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
     <br>
     <input type = "text" placeholder="Enter A Color" id = "txtNameDist"
        onkeydown = "if (event.keyCode == 13)
