--- a/local.html
+++ b/local.html
@@ -19,7 +19,7 @@
         </div>
       </div>
     </header>
-    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='index.html';">
+    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
     <br>
     <input type = "text" placeholder="Enter A Color" id = "txtNameLocal"
        onkeydown = "if (event.keyCode == 13)
