Updating css/html

--- a/control.html
+++ b/control.html
@@ -21,7 +21,6 @@
       </header>
 
       <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
-      <!--<input type="button" value="Distribute" id="poke">-->
       <br>
       <input type = "text" placeholder="Enter Your Name" id = "txtName"
        onkeydown = "if (event.keyCode == 13)
@@ -96,5 +95,8 @@
               }*/
             })
         </script>
+        <footer>
+          Cisco Hyperinnovation Living Labs (CHILL)
+        </footer>
     </body>
 </html>
