--- a/local.html
+++ b/local.html
@@ -17,11 +17,16 @@
         <div id="branding">
           <h1>Local Data Storage</h1>
         </div>
+        <nav>
+          <ul>
+            <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
+          </ul>
+        </nav>
       </div>
     </header>
-    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
+    <!--<input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">-->
     <br>
-    <input type = "text" placeholder="Enter A Color" id = "txtNameLocal"
+    <input type = "email" placeholder="Enter A Color" id = "txtNameLocal"
        onkeydown = "if (event.keyCode == 13)
                         document.getElementById('btnSubmit').click()">
 
