--- a/dist.html
+++ b/dist.html
@@ -22,7 +22,7 @@
 
     <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
     <br>
-    <input type = "text" placeholder="Enter A Color" id = "txtNameDist"
+    <input type = "email" placeholder="Enter A Color" id = "txtNameDist"
        onkeydown = "if (event.keyCode == 13)
                         document.getElementById('btnSubmit').click()">
 
