--- a/dist.html
+++ b/dist.html
@@ -17,26 +17,38 @@
         <div id="branding">
           <h1>Distributed Data Flow</h1>
         </div>
+        <nav>
+          <ul>
+            <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
+          </ul>
+        </nav>
       </div>
     </header>
 
-    <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
-    <br>
-    <input type = "email" placeholder="Enter A Color" id = "txtNameDist"
-       onkeydown = "if (event.keyCode == 13)
+    <section id="newsletter">
+      <div class="container">
+        <div class="buttonHolder">
+          <!--<input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">-->
+          <br><br><br>
+          <input type = "email" placeholder="Enter A Color" id = "txtNameDist"
+            onkeydown = "if (event.keyCode == 13)
                         document.getElementById('btnSubmit').click()">
 
-    <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();">
-    <br>
-    <input type = "button" id = "btnDistSave" value = "Save Again" class = "hiddenLocalButton">
-    <input type = "button" id = "btnDistAdd" value = "Add Data" class = "hiddenLocalButton">
-    <br><br>
-    <section class="borderexamplelocaldist" id="data_zone">
-
-    </section> <br>
-    <section class="borderexamplelocaldist" id="data_zone2">
-
+          <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();"><br><br>
+          <input type = "button" id = "btnDistSave" value = "Save Again" class = "hiddenLocalButton">
+          <input type = "button" id = "btnDistAdd" value = "Add Data" class = "hiddenLocalButton">
+        </div>
+      </div>
     </section>
+    <div id="outer">
+      <br><br><br>
+      <section class="borderexamplelocaldist" id="data_zone">
+
+      </section> <br>
+      <section class="borderexamplelocaldist" id="data_zone2">
+
+      </section>
+    </div>
     <script>
         var socket = io.connect('http://www.ciscochill.com:80');
         //var socket = io.connect('http://localhost:8080');
@@ -44,7 +56,8 @@
         document.getElementById("data_zone2").style.display="none";
         var gotName = localStorage.getItem("storageNameDist");
         //$('#data_zone').prepend('<p><strong>' + gotName + '</strong></p>');
-        $('#data_zone').prepend('<strong>' + gotName + '</strong>');
+        //$('#data_zone').prepend('<strong>' + gotName + '</strong>');
+        $('#data_zone').prepend('<strong><center><font size="6", face="Arial, Helvetica,sans-serif", color="#ffffff">' + gotName + '</font></center></strong>');
         socket.emit('message', gotName);
 
         $('#btnDistSave').click(function () {
@@ -63,7 +76,8 @@
           document.getElementById("txtNameDist").style.display="none";
           document.getElementById("data_zone2").style.display="block";
           //$('#data_zone2').prepend('<p><strong>' + color + '</strong></p>');
-          $('#data_zone2').prepend('<strong>' + color + '</strong>');
+          //$('#data_zone2').prepend('<strong>' + color + '</strong>');
+          $('#data_zone2').prepend('<strong><center><font size="6", face="Arial, Helvetica,sans-serif", color="#ffffff">' + color + '</font></center></strong>');
           //send this data for adding
           socket.emit('message', color);
         })
