Trie page refresh but doesn't work

--- a/control.html
+++ b/control.html
@@ -52,6 +52,10 @@
             var flag="false";
             var flagGT="false";
             document.getElementById("btnSubmit").style.display="none";
+            /*document.addEventListener('DOMContentLoaded', function(e) {
+                // your reset button handler here
+                location.href='control.html';
+              });*/
 
             $('#btnLocal').click(function () {
               var name = document.getElementById("txtName").value;
